@@ -313,9 +313,9 @@ public class PackageDefinitionImpl implements PackageDefinition {
         writer.element("home-page", homePage);
         writer.element("license", license);
         writer.element("license-url", licenseUrl);
-        writer.element("hotreload-support", new Boolean(hotReloadSupport).toString());
-        writer.element("supported", new Boolean(supported).toString());
-        writer.element("require-terms-and-conditions-acceptance", new Boolean(requireTermsAndConditionsAcceptance).toString());
+        writer.element("hotreload-support", Boolean.valueOf(hotReloadSupport).toString());
+        writer.element("supported", Boolean.valueOf(supported).toString());
+        writer.element("require-terms-and-conditions-acceptance", Boolean.valueOf(requireTermsAndConditionsAcceptance).toString());
         writer.element("production-state", productionState.toString());
         writer.element("nuxeo-validation", validationState.toString());
 
@@ -345,6 +345,7 @@ public class PackageDefinitionImpl implements PackageDefinition {
         }
         if (uninstaller != null) {
             writer.start("uninstaller");
+            // FIXME: I think this should be 'uninstaller' below, not 'installer'
             writer.attr("class", installer.getType());
             writer.attr("restart",
                     String.valueOf(installer.getRequireRestart()));
